
Tue Jan 30 08:30:33  2001  Earnie Boyd  <earnie@users.sourceforge.net>

	* objidl.h: (GetClassID): Argument needs to be a pointer.
	(GetUnmarshalClass): CLSID argument needs to be a pointer.
	Thanks To: <bge@users.sourceforge.net>

Tue Jan 30 07:52:54  2001  Earnie Boyd  <earnie@users.sourceforge.net>

	* Apply Danny Smith patch 102386
	2000-11-15  Danny Smith  <danny_r_smith_2001@yahoo.co.nz>
	* lib/rasapi32.def: add symbols available in NT4 and W2k

Sun Jan 28 12:47:31  2001  Earnie Boyd  <earnie@users.sourceforge.net>

	* Apply Danny Smith patch 102382
	2000-11-15  Danny Smith  <danny_r_smith_2001@yahoo.co.nz>
	* lib/mswsock.def: remove leading underscores from symbol names

Sun Jan 28 11:16:39  2001  Earnie Boyd  <earnie@users.sourceforge.net>

	* Apply Danny Smith patch 102446
	2000-11-20  Danny Smith  <danny_r_smith_2001@yahoo.co.nz>
	* include/sql.h (ODBCVER): change default to 0x0351.
	(SQLSetScrollOptions): non-core function, move prototype to sqlext.h.
	(SQLColAttributes): likewise.
	(SQLBindParam): add prototype for ODBC 3.x function.
	(SQLCloseCursor): likewise.
	(SQLColAttribute): likewise.
	(SQLCopyDesc):likewise.
	(SQLEndTran): likewise.
	(SQLFetchScroll): likewise.
	(SQLGetConnectAttr): likewise.
	(SQLGetDescField): likewise.
	(SQLGetDescRec): likewise.
	(SQLGetDiagField): likewise.
	(SQLGetDiagRec): likewise.
	(SQLGetEnvAttr): likewise.
	(SQLGetStmtAttr): likewise.
	(SQLSetConnectAttr): likewise.
	(SQLSetDescField):likewise.
	(SQLSetDescRec): likewise.
	(SQLSetEnvAttr): likewise.
	(SQLSetStmtAttr): likewise.
	(SQLINTENGER and SQLUINTEGER): replace with SQLLEN and SQLULEN for 
	_WIN64 compatability; 
	(SQL_ACCESS_MODE): Move define to sqlext.h (used in non-core functions).
	(SQL_ACTIVE_CONNECTIONS): likewise.
	(SQL_ACTIVE_STATEMENTS): likewise.
	(SQL_ALL_EXCEPT_LIKE): likewise.
	(SQL_API_ALL_FUNCTIONS): likewise.
	(SQL_API_LOADBYORDINAL): likewise.
	(SQL_API_SQLBINDPARAMETER): likewise.
	(SQL_API_SQLBROWSECONNECT): likewise.